solite-core/src/snapshots/solite_core__tests__core_basic-2.snap
---
source: solite-core/src/lib.rs
expression: modules_of(&runtime.connection)
---
- bytecode
- completion
- csv
- csv_fields
- csv_reader
- csv_rows
- dbstat
- fsdir
- fts5
- fts5vocab
- generate_series
- geopoly
- json_each
- json_tree
- lines_read
- pragma_function_list
- pragma_module_list
- regex_captures
- regex_find_all
- regex_split
- regexset_matches
- rtree
- rtree_i32
- spellfix1
- sqlite_stmt
- tables_used
- tg0
- tg_bbox
- tg_each
- tg_geometries_each
- tg_lines_each
- tg_points_each
- tg_polygons_each
- tsv
- tsv_fields
- tsv_reader
- tsv_rows
- vec0
- vec_each
- xsv
- xsv_fields
- xsv_reader
- xsv_rows
- zipfile
