solite-core/src/snapshots/solite_core__tests__snap-3.snap
---
source: solite-core/src/lib.rs
expression: step
snapshot_kind: text
---
Ok:
  preamble: ~
  result:
    SqlStatement:
      stmt: {}
      raw_sql: "insert into t select 2; "
  reference:
    block_name: "[input]"
    line_number: 4
    column_number: 1
    region: []
